# primal-equestria

./: .gitignore  CMakeLists.txt  README.md  loc
gource/: capture.sh  ignore_files
pe/: CMakeLists.txt
pe/include/pe/: App.h  DebugTextScroll.h  InputMapper.h  InputMapperEvents.h  SpellCrafter.h  UICurve.h  UISpellCrafter.h
pe/src/: App.cpp  DebugTextScroll.cpp  InputMapper.cpp  SpellCrafter.cpp  UICurve.cpp  UISpell.cpp  UISpellCrafter.cpp
scripts/: setup-urho3d.sh
